 - Fixed opening URL irc://NetWork/#channel not joining the channel
   [1362155].
 - Fixed the nickname label becoming small when you're marked Back
   if you have "Small tabs" turned on.
 - The textevents GUI has been re-written to use GtkTreeView.
 - Randomized DNS lookups on Mac OS X on hostnames that return
   multiple IP numbers (SG / CL).
 - 
 - 
 - Perl:
  - using emit_print/command/recv will no longer trigger their own
    callbacks


----------------------------------------------------------------------
 2.6.0 - 03/Nov/2005
----------------------------------------------------------------------

 - Updated translations (nl, zh_TW).
 - Message boxes are now warning, error or info with appropriate icon.
 - Red marker line feature enabled by default.
 - Added /SEND <nick> [file] which will automatically switch to PSEND
   when detecting a private net address.
 - Simplified default nick-right-click menu.
 - Show "Last Talk" in nick-right-click menu as "minutes ago".
 - Strip mIRC colour from away message in right-click menu.
 - Warn when opening banlist in non-channel.
 - Reorganised and simplified IRC/Server menus and new View menu.
 - The editable Server menu is no more, if you want it type
   /set gui_usermenu 1 and restart.
 - Option to view channels in tabs or tree structure.
 - Shorter titlebar text for better viewing in taskbar.
 - Disabled key-search in server list, as GTK's auto-find does this
   better.
 - Removed "Connect in new tab" button in server list, it now does it
   intelligently. Use stock Connect icon.
 - Removed "Tint (shade) transparency" item from settings and figure
   it out based on tint values.
 - When closing a tab, re-focus the one near by, instead of always the
   last.
 - Firefox style close button.
 - The lag and throttle metres now have tooltips that give you real
   information (hover the pointer over them).
 - Added workaround to show on-join ChanServ notices in the right tab.